# COSC_352_SPRING_2026

Princess_Ekoh/project07/: Cargo.toml  README.md  sample.csv
Princess_Ekoh/project07/src/: main.rs
abdul_quayyum_yussuf/project07/csvprof/: Cargo.toml  DESIGN.md  README.md  comprehensive_test.csv  constant_test.csv  sample.csv
abdul_quayyum_yussuf/project07/csvprof/src/: cli.rs  error.rs  infer.rs  main.rs  output.rs  report.rs
abdul_quayyum_yussuf/project07/csvprof/src/profiler/: boolean.rs  categorical.rs  (+5 more)
adebisi_agbakosi/project07/: cargo.toml
adebisi_agbakosi/project07/src/: main.rs
aditya_poudel/project07/: Readme.md
aditya_poudel/project07/csvprofiler/: Cargo.toml  sample.csv
aditya_poudel/project07/csvprofiler/src/: error.rs  main.rs  profiler.rs  report.rs  stats.rs  types.rs
braydon_jones/project07/: data_profiler.rs  main.rs
chukwuemeka_obasi/project07/: Cargo.toml  test_data.csv
chukwuemeka_obasi/project07/src/: csv_profiler.rs  main.rs  utils.rs
chukwuemeka_obasi/project07/src/profiler/: categorical.rs  mod.rs  numeric.rs  traits.rs
corey_hawkins/project07/: Cargo.toml  main.rs  profile.rs
csvprof/: Cargo.toml
enoch_williams/project06/: Dockerfile  README.md  app.R  run_dashboard.sh  test.dockerfile
grace_joseph/project05/: Dockerfile  README.md  histogram.R  run.sh
gulam_uddin/project07/: Cargo.toml  READ.md  sample.csv
gulam_uddin/project07/src/: cli.rs  error.rs  infer.rs  main.rs  profile.rs  report.rs  stats.rs  tests.rs  types.rs
joseph_egbujonuma/project06/: Dockerfile  README.md  app.R  run_dashboard.sh
joseph_egbujonuma/project07/: data.csv
joseph_egbujonuma/project07/src/: main.rs  report.rs
joseph_egbujonuma/project08/: Cargo.toml  README.txt
joseph_egbujonuma/project08/data/: Completed_City_Demo.csv
joseph_egbujonuma/project08/reports/: arrests_report.txt  demolitons_report.txt
joseph_egbujonuma/project08/src/: analysis.rs  main.rs  profiler.rs  types.rs
karl_agli/project07/: Cargo.toml
kyle_holmes/project07/csvprof/: Cargo.toml  test.csv
kyle_holmes/project07/csvprof/src/: main.rs
najae_potts/project07/: README.md
najae_potts/project07/project07/: Cargo.toml
najae_potts/project07/project07/src/: main.rs  profile.rs
nasif_ajilore/project07/csvprof/: Cargo.toml  sample.csv
nasif_ajilore/project07/csvprof/src/: cli.rs  error.rs  infer.rs  main.rs  reader.rs  report.rs  stats.rs  types.rs
obaloluwa_wojuade/project07/: Cargo.toml  sample.csv
obaloluwa_wojuade/project07/src/: cli.rs  column.rs  error.rs  main.rs  profiler.rs  report.rs  stats.rs  types.rs
ositadinma_odunze/project06/: Dockerfile  README.md  app.R  run_dashboard.sh
ositadinma_odunze/project07/csvprof/: Cargo.toml  Readme ·MD
ositadinma_odunze/project07/csvprof/src/: accumulator.rs  cli.rs  error.rs  infer.rs  main.rs  profiler.rs  report.rs  types.rs
randolph_bame/project06/: Dockerfile-1  README-2.md  app-1.R  homicide_data-1.csv  run_dashboard-1.sh
rashaa_mcqueen/project07/: data.csv
rashaa_mcqueen/project07/csvprof/csvprof/: Cargo.toml
rashaa_mcqueen/project07/src/: main.rs
rashaa_mcqueen/project08/: Cargo.toml  README.md
rashaa_mcqueen/project08/data/: vacant.csv
rashaa_mcqueen/project08/src/: main.rs
sandeep_shah/project07/csvprof/: .gitignore  Cargo.toml  README.md  sample.csv
sandeep_shah/project07/csvprof/src/: cli.rs  error.rs  main.rs  profiler.rs  report.rs  stats.rs
sidney_green/project07/: Cargo.toml  sample.csv
sidney_green/project07/src/: main.rs
taniyah_payton/project07/: README-2.md
(+1 files in other folders)
