[package]

name = "csvprof"

version = "0.1.0"

edition = "2021"

[dependencies]

clap = { version = "4.5.4", features = ["derive"] }

csv = "1.3.0"

chrono = { version = "0.4.38", features = ["serde"] }

stats = "0.1.0" 

term_table = "1.2.2"

anyhow = "1.0.82"

serde = { version = "1.0.200", features = ["derive"] }

serde_json = "1.0.115"
