[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"
description = "A command-line CSV data profiling tool"

[[bin]]
name = "csvprof"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
comfy-table = "7"
ordered-float = "4"