[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
chrono = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
thiserror = "1"
ordered-float = "4"
