[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"
description = "A fast CSV data profiling CLI tool"

[[bin]]
name = "csvprof"
path = "src/main.rs"

[dependencies]
csv = "=1.3.0"
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
comfy-table = "=7.0.1"
colored = "=2.0.4"
thiserror = "=1.0.58"
regex = "=1.10.4"

[profile.release]
opt-level = 3