[package]
name = "csvprof"
version = "0.1.0"
edition = "2024"
description = "A command-line CSV data profiling tool"

[[bin]]
name = "csvprof"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "=6.2.0"
anyhow = "1.0"
thiserror = "=1.0.56"
ordered-float = "=4.2.2"
indexmap = "=1.9.3"