[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"
description = "A command-line CSV data profiling tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
