[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"
description = "A fast, streaming CSV data profiling CLI tool"

[[bin]]
name = "csvprof"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
comfy-table = "=7.1.1"
colored = "2"
anyhow = "1"
thiserror = "1"
